# udokai

./: .watch.yaml  Cargo.toml  Makefile  README.md  flake.nix  shell.nix  todo.txt
client/: Cargo.toml
client/src/: main.rs
gui/: Cargo.toml  Dioxus.toml
gui/src/: lib.rs
guiced/: Cargo.toml
guiced/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
supervisor/: Cargo.toml
supervisor/src/: lib.rs  process_actor.rs  supervisor.rs
tui/: Cargo.toml
tui/src/: lib.rs
