[package]
name = "udokai"
version = "0.1.0"
authors = ["cristianoliveira <me@cristianoliveira.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Internal pkgs
# gui = { path = "gui" }
# guiced = { path = "guiced" }
client = { path = "client" }
server = { path = "server" }
tui = { path = "tui" }
shared.workspace = true

# External pkgs
dioxus.workspace = true
dioxus-logger.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
log4rs.workspace = true
crossterm = "0.28.1"

[workspace.dependencies]
dioxus = { version = "0.5", features = ["desktop"] }
dioxus-logger = "0.5.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
log4rs = "1.3.0"
shared = { path = "shared" }

[workspace]
members = [ "client", "gui" , "guiced", "server", "shared", "tui"]
