[package]
name = "udokai"
version = "0.1.0"
authors = ["cristianoliveira <me@cristianoliveira.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Internal pkgs
# TODO: adds a gui package using iced
# gui = { path = "gui" }
tui = { path = "tui" }
shared.workspace = true

# External pkgs
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
log4rs.workspace = true
crossterm = "0.28.1"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
log4rs = "1.3.0"
shared = { path = "shared" }

[workspace]
members = [ "client", "server", "shared", "tui"]
