[package]
name = "udokai"
version = "0.0.1"
authors = ["cristianoliveira <me@cristianoliveira.com>"]
edition = "2021"
description = "The launcher for unix-like systems - udokai"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Internal pkgs
# TODO: adds a gui package using iced
# gui = { path = "gui" }
udokai-tui = { version = "0.0.1", path = "./tui" }
udokai-supervisor = { version = "0.0.1", path = "./supervisor" }
udokai-shared.workspace = true

# External pkgs
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
log4rs.workspace = true
crossterm = "0.28.1"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
log4rs = "1.3.0"
udokai-shared = { version = "0.0.1", path = "./shared" }

[workspace]
members = [ "client", "server", "shared", "supervisor", "tui"]
